--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,10 +8,10 @@ keywords = ["ONOC", "API", "Script"]
 
 
 [dependencies]
-reqwest = "^0.8"
-serde = "^1"
-serde_json = "^1"
-toml = "^0.4"
-serde_derive = "^1"
-chrono = "^0.4"
-ears = "^0.4"
+reqwest = "0.8"
+serde = "1"
+serde_json = "1"
+toml = "0.4"
+serde_derive = "1"
+chrono = "0.4"
+ears = "0.4"
